--- a/app/view/default/index.Twig
+++ b/app/view/default/index.Twig
@@ -1,5 +1,6 @@
 {% extends 'default/layout/base.Twig' %}
 
+{% block title %} {{sysConfig.website_title}} {% endblock %}
 {% block content %}
 	<div class="is-centered ">
 		<div class="flex flex-col divide-y divide-[#C0BEBF]/10 divide-solid">
@@ -13,68 +14,6 @@
 {% block afterScript %}
 	<script src="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.js"></script>
 	<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.min.css"/>
-	<script>
-
-    $(function () {
-
-      //评论工具栏
-      $("div[data-trigger-comment]").click(function () {
-        const id = $(this).data('trigger-comment')
-        const $target = $("form[data-comment-box='" + id + "']")
-        const $commentBox = $("form[data-comment-box]")
-        $commentBox.not($target).removeClass('flex').addClass('hidden');
-        $commentBox.not($target).each(function () {
-          if ($(this).is(":only-child")) {
-            $(this).parent().removeClass('flex').addClass('hidden');
-          }
-        })
-        if ($target.hasClass('flex')) {
-          $target.removeClass('flex').addClass('hidden')
-        } else {
-          $target.removeClass('hidden').addClass('flex')
-          $("div[data-comment-area='" + id + "']").removeClass('hidden').addClass('flex')
-        }
-      })
-
-
-      // markdown解析
-      $("div[data-content]").each(function (index) {
-        new toastui.Editor({
-          el: $(this).get(0),
-          initialValue: $(this).data('content') + ''
-        });
-        $(this).attr('data-content', '')
-      })
-
-      // 互动工具栏
-      $(document.body).on('click', function (event) {
-        const $target = $(event.target); // 获取被点击的元素
-        const $trigger = $($target.closest('[data-trigger]'))
-        const $triggerItem = $($target.closest('[data-trigger-item]'))
-        if ($trigger.length > 0) {
-          $("div[data-trigger-item]").hide()
-          $($trigger).next().toggle()
-        } else if ($triggerItem.length > 0) {
-          $($triggerItem).hide();
-        } else {
-          $("div[data-trigger-item]").hide()
-        }
-      })
-
-      // 发起点赞
-      $("form[data-like-form]").submit(function () {
-        const id = $(this).data('like-form')
-        const commentAreaSel = `div[data-comment-area='${id}']`
-        $(this).ajaxSubmit(function (data) {
-          $(commentAreaSel)
-              .removeClass('hidden').addClass('flex')
-          $(commentAreaSel).find("> div[data-fav-count-box]")
-              .removeClass('hidden').addClass('flex')
-          $(commentAreaSel).find(".fav_count").text(data.fav_count)
-          $(commentAreaSel).find("span[data-like-persons]").text(data.like_persons)
-        })
-        return false;
-      })
-    })
+	<script src="/js/main.js">
 	</script>
 {% endblock %}
