--- a/app/view/default/user/settings.Twig
+++ b/app/view/default/user/settings.Twig
@@ -1,4 +1,6 @@
 {% extends 'default/layout/base.Twig' %}
+{% block title %} 个人设置 {% endblock %}
+
 {% block content %}
 	<form action="/user/saveSettings" method="post" class="px-10 py-4" enctype="multipart/form-data">
 		<div class="field">
