--- a/app/view/default/component/memo.Twig
+++ b/app/view/default/component/memo.Twig
@@ -106,9 +106,9 @@
 				      action="/memo/comment/{{ memo.id }}">
 					<textarea class="textarea is-small" name="content" placeholder="友好发言!"></textarea>
 					<div class="flex flex-row gap-2">
-						<input class="input is-small" name="username" placeholder="昵称"/>
-						<input class="input is-small" name="email" placeholder="邮箱"/>
-						<input class="input is-small" name="website" placeholder="网站"/>
+{#						<input class="input is-small" name="username" placeholder="昵称"/>#}
+{#						<input class="input is-small" name="email" placeholder="邮箱"/>#}
+{#						<input class="input is-small" name="website" placeholder="网站"/>#}
 						<button class="button is-small" type="submit">评论</button>
 					</div>
 				</form>
