--- a/app/view/default/index.Twig
+++ b/app/view/default/index.Twig
@@ -13,7 +13,7 @@
 
 {% block afterScript %}
 	<script src="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.js"></script>
-	<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.min.css"/>
+{#	<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.min.css"/>#}
 	<script src="/js/main.js">
 	</script>
 {% endblock %}
