--- a/app/view/default/memo/save.Twig
+++ b/app/view/default/memo/save.Twig
@@ -19,9 +19,9 @@
 					<button class="button is-link is-small">
 						<span>发言</span>
 					</button>
-					<button class="button is-small" onclick="location.href='/'">
+					<a class="button is-small" href="/">
 						<span>返回</span>
-					</button>
+					</a>
 				</div>
 			</div>
 		</form>
