--- a/app/view/default/user/login.Twig
+++ b/app/view/default/user/login.Twig
@@ -30,11 +30,11 @@
 
 		<div class="field is-grouped">
 			<div class="control">
-				<button class="button is-link ">
+				<button class="button is-link is-small">
 					<span>登录</span>
 				</button>
 
-				<a class="button is-light " href="/user/reg">去注册</a>
+				<a class="button is-light is-small" href="/user/reg">去注册</a>
 			</div>
 
 		</div>
