--- a/app/view/default/user/reg.Twig
+++ b/app/view/default/user/reg.Twig
@@ -52,11 +52,11 @@
 
 			<div class="field is-grouped">
 				<div class="control">
-					<button class="button is-link ">
+					<button class="button is-link is-small">
 						<span>注册用户</span>
 					</button>
 
-					<a class="button is-light " href="/user/login">去登录</a>
+					<a class="button is-light is-small" href="/user/login">去登录</a>
 				</div>
 
 			</div>
