--- a/app/view/default/component/memo.Twig
+++ b/app/view/default/component/memo.Twig
@@ -6,7 +6,7 @@
 			{{ memo.author.nickname }}
 		</div>
 
-		<div class="text-wrap break-all line-clamp-10" data-content="{{ memo.content }}">
+		<div class="text-wrap break-all line-clamp-10 text-base" data-content="{{ memo.content }}">
 		</div>
 
 		<div class="flex justify-between relative items-center">
