--- a/app/view/default/index.Twig
+++ b/app/view/default/index.Twig
@@ -11,8 +11,8 @@
 {% endblock %}
 
 {% block afterScript %}
-	<script src="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.js"></script>
-	<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.min.css"/>
+	<script src="https://cdn.mblog.club/mm/toastui-editor-viewer.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.mblog.club/mm/toastui-editor-viewer.min.css"/>
 	<script>
 
     $(function () {
