--- a/app/view/default/layout/base.Twig
+++ b/app/view/default/layout/base.Twig
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{% block title %} {% endblock %}</title>
-	<script src="https://cdn.jsdelivr.net/npm/@unocss/runtime"></script>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
-	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
+	<script src="https://cdn.mblog.club/mm/unocss.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.mblog.club/mm/bulma-v1.0.1.css">
+	<script src="https://cdn.mblog.club/mm/jquery.min.js"></script>
+	<script src="https://cdn.mblog.club/mm/jquery.form.min.js"></script>
 	{% include 'default/layout/header.Twig' %}
 	{% block beforeScript %} {% endblock %}
 	<style>
