--- a/app/view/default/memo/save.Twig
+++ b/app/view/default/memo/save.Twig
@@ -29,9 +29,9 @@
 {% endblock %}
 
 {% block beforeScript %}
-	<script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
-	<script src="https://uicdn.toast.com/editor/latest/i18n/zh-cn.js"></script>
-	<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css"/>
+	<script src="https://cdn.mblog.club/mm/toastui-editor-all.min.js"></script>
+	<script src="https://cdn.mblog.club/mm/toast.zh.cn.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.mblog.club/mm/toastui-editor.min.css"/>
 {% endblock %}
 
 {% block afterScript %}
