--- a/app/view/default/layout/header.Twig
+++ b/app/view/default/layout/header.Twig
@@ -1,2 +1,2 @@
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.mblog.club/mm/toastify.min.css">
+<script type="text/javascript" src="https://cdn.mblog.club/mm/toastify-js.min.js"></script>
