--- a/app/view/default/layout/base.Twig
+++ b/app/view/default/layout/base.Twig
@@ -19,7 +19,7 @@
 		</style>
 	{% endif %}
 </head>
-<body class="bg-[#f1f5f9] dark:bg-slate-800 rounded-md dark:text-[#C0BEBF] flex flex-col">
+<body class=" flex-1 h-full bg-[#f1f5f9] dark:bg-slate-800 rounded-md dark:text-[#C0BEBF] flex flex-col">
 <div class="lg:w-[567px] mx-auto shadow-2xl bg-white dark:bg-[#181818] flex-1" un-cloak>
 	{% if currentUser and currentUser.config.selfHomePage == "on" and path == '/' %}
 	{% else %}
